--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -20,4 +20,4 @@ jobs:
     - name: Analysing the code with pylint
       run: |
         pip install -r system/requirements.txt
-        pylint app.py --disable=C0103,E1101,R0914,R0915,W0123,W0105,W0611,W0702
+        pylint system/app.py --disable=C0103,E1101,R0914,R0915,W0123,W0105,W0611,W0702
