--- a/system/static/js/package.json
+++ b/system/static/js/package.json
@@ -6,11 +6,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "format:check": "prettier --check app.js",
-    "format:fix": "prettier --write app.js"
+    "format:fix": "prettier --write app.js",
+    "lint:check": "eslint app.js",
+    "lint:fix": "eslint --fix app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "eslint": "^8.1.0",
+    "eslint-config-prettier": "^8.3.0",
     "prettier": "^2.4.1"
   }
 }
