ESLintに基づいて修正

--- a/system/static/js/.eslintrc.json
+++ b/system/static/js/.eslintrc.json
@@ -7,6 +7,8 @@
   "extends": ["eslint:recommended", "prettier"],
   "globals": {
     "Vue": false,
-    "axios": false
+    "axios": false,
+    "webkitSpeechRecognition": false,
+    "Chart": false
   }
 }
